<resources>
    <!-- App Info -->
    <string name="app_name">ProjetoSolar</string>

    <!-- Configs -->
    <string name="preference_file_key"> &lt; </string>

    <!-- Nav Bar \ -->
    <string name="nav_home_page">Home</string>
    <string name="nav_spaces_page">My Spaces</string>
    <string name="nav_availability">Availability</string>
    <string name="nav_id_page">ID</string>
    <string name="nav_profile_page">Profile</string>


    <!-- LogIn Entry Page -->
    <string name="login_entry_company_img_descript">logo</string>
    <string name="login_entry_username">Username</string>
    <string name="login_entry_password">Password</string>
    <string name="login_entry_forgot_credentials_button">Forgot Username or Password</string>
    <string name="login_entry_logIn_button">LogIn</string>
    <string name="login_entry_logIn_signup_button">Are you new? Join Us!</string>

    <!-- Signup User Page -->
    <string name="signup_usr_title">Signup</string>
    <string name="signup_usr_username">Full Name</string>
    <string name="signup_usr_email">Email</string>
    <string name="signup_usr_phone">Phone Number</string>
    <string name="signup_usr_password">Password</string>
    <string name="signup_usr_password_confirm">Confirm Password</string>
    <string name="signup_usr_bdate">Birth Date</string>
    <string name="signup_usr_bdate_hint">DD/MM/YYYY</string>
    <string name="signup_usr_doc_type">Document Type</string>
    <string name="signup_usr_doc_num">Document Number</string>
    <string name="signup_usr_next_button">Next</string>
    <string name="signup_usr_complete_button">Finish</string>
    <string name="signup_usr_confirm_button">Confirm</string>

    <!--- Email Recovery Page -->
    <string name="email_recovery_email_hint">Email</string>
    <string name="email_recovery_send_button">Send</string>
    <string name="email_recovery_intro_message">We will send you an email shortly.</string>

    <!-- Id Page -->
    <string name="id_page_card_img">Id Card</string>

    <!-- Main/Event Page -->
    <string name="mainpage_datePicker_label">Events</string>
    <string name="mainpage_events_events_scroll_descrip">Current Events</string>
    <string name="mainpage_events_space_info_button">See More …</string>
    <string name="mainpage_events_datapicker_today">Today...</string>
    <string name="mainpage_events_datapicker_week">This Week...</string>
    <string name="mainpage_events_datapicker_month">This Month...</string>
    <string name="mainpage_events_datapicker_next">Up Next...</string>
    <string name="mainpage_events_show_me_more_bttn">Show Me More!</string>
    <string name="mainpage_spaces_show_me_more_bttn">More information</string>
    <string name="mainpage_spaces_title">Coworks near you</string>

    <!-- Main/MySpaces Page -->
    <string name="myspaces_page_title">My Spaces</string>
    <string name="mainpage_event_row_item_name1">Company 1</string>
    <string name="mainpage_event_row_item_name2">Company 2</string>

    <!-- Plant Selector -->
    <string name="plant_selector_title">Select a Space</string>
    <string name="plant_selector_coworking_name_1">Coworking 1</string>
    <string name="plant_selector_coworking_name_2">Coworking 2</string>
    <string name="plant_selector_coworking_name_3">Coworking 3</string>
    <string name="plant_selector_coworking_name_4">Coworking 4</string>
    <string name="plant_selector_image_description">Coworking Image</string>
    <string name="plant_selector_office_preview_button_coworking_1">Location 1</string>
    <string name="plant_selector_office_preview_button_coworking_2">2 </string>
    <string name="plant_selector_office_preview_button_coworking_3">3 </string>
    <string name="plant_selector_office_preview_button_coworking_4">4 </string>

    <!-- Coworking Floor Plant Availability-->
    <string name="cfpa_home_title">Floor Plant </string>
    <string name="cfpa_floor_image_description">Floor Plant Image </string>
    <string name="cfa_floor_plant_button_1">- </string>
    <string name="cfa_floor_plant_button_2">2 </string>
    <string name="cfa_floor_plant_button_3">3 </string>
    <string name="cfa_floor_plant_button_4">4 </string>
    <string name="cfa_floor_plant_button_5">5 </string>
    <string name="cfa_floor_plant_button_6">6 </string>
    <string name="cfa_floor_plant_button_7">7 </string>
    <string name="cfa_floor_plant_button_8">8 </string>
    <string name="cfa_floor_plant_button_9">9 </string>

    <!--- RSVP Page -->
    <string name="rsvp_event_name">Suspended Yoga</string>
    <string name="rsvp_event_descrip">A relaxing and calming experience to everyone!</string>
    <string name="rsvp_date">23 de janeiro 16:00</string>
    <string name="rsvp_accept_bttn">Let\'s Go!</string>
    <string name="rsvp_notify_bttn">Next Time</string>
    <string name="rsvp_accept_message">Joined Event!</string>
    <string name="rsvp_notify_message">We will notify you.</string>

    <!--- Subscription Info Page -->
    <string name="sub_info_end_bttn">Cancel Subscription</string>

    <!-- Space Info Page -->
    <string name="space_info_title">The Solar Coworking Company</string>
    <string name="space_info_local">Avenida da Liberdade Nº 16</string>
    <string name="space_info_descrip">An excellent place to sit down and start cracking the problems of the Universe.</string>
    <string name="space_info_image">Space Image</string>
    <string name="space_info_tags">Dog Friendly, Cafeteria, Break Rooms</string>
    <string name="space_info_plans_list">Space Plans List</string>
    <string name="space_info_plan_default_title">Premium Subscription</string>
    <string name="space_info_plan_default_decrip">40 hours of access per month, to the entire campus without restrictions.</string>
    <string name="space_info_plan_default_renewal">Monthly</string>
    <string name="space_info_plan_default_price">79,99€</string>

    <!--- Plan Subscript Page -->
    <string name="plan_contact_title">Would you like to get in touch with this Cowork Space?"</string>
    <string name="plan_contact_bttn">Contact</string>

    <!-- Profile Page -->
    <string name="profile_email_display">jessicacastor@gmail.com</string>
    <string name="profile_settings_button">Settings</string>
    <string name="profile_name_display">Jessica Castor</string>
    <string name="profile_avatar_display">User Avatar Photo</string>
    <string name="profile_back_button">Temp Buttton</string>

    <!--- Calendar -->
    <string name="calendar_title">Your Calendar</string>
    <string name="calendar_event_name_default">Suspended Yoga</string>
    <string name="calendar_event_descrip_default">A relaxing and calming experience to everyone!</string>
    <string name="calendar_event_start_time_default">12:30</string>
    <string name="calendar_day_default">TODAY</string>

    <!--- Settings Page -->
    <string name="settings_page_title">Settings</string>
    <string name="settings_page_button_1">Change Name</string>
    <string name="settings_page_button_2">Change Password</string>
    <string name="settings_page_button_3">Change Appearance</string>
    <string name="settings_page_button_4">Log Out</string>

    <!--- Change name Page -->
    <string name="change_name_page_title">Insert new Name</string>
    <string name="change_name_page_hint">New Name</string>
    <string name="change_name_page_button">Confirm</string>

    <!--- Change Password Page -->
    <string name="change_password_page_title">Insert new Password</string>
    <string name="change_password_page_hint">New Password</string>
    <string name="change_password_page_old_password">Current Password</string>
    <string name="change_password_page_button">Confirm</string>

    <!--- Change Apperance Page -->
    <string name="change_apperance_page_title">Change Appearance</string>
    <string name="change_apperance_page_button_lightmode">Light Mode</string>
    <string name="change_apperance_page_button_darkmode">Dark Mode</string>

    <!--- Island Reserve Desk Page -->
    <string name="idrp_title">Check In</string>
    <string name="idrp_desk_1_code">Desk 1</string>
    <string name="idrp_desk_2_code">Desk 2</string>
    <string name="idrp_desk_3_code">Desk 3</string>
    <string name="idrp_desk_4_code">Desk 4</string>
    <string name="idrp_desk_5_code">Desk 5</string>
    <string name="idrp_desk_6_code">Desk 6</string>
    <string name="idrp_desk_reserve_button">Check In Now!</string>

    <!--- Qr-Camera Page -->
    <string name="qr_camera_preview_title">Scan a Qr Code</string>

</resources>