<?xml version="1.0" encoding="utf-8"?>

<!-- Navigarion Bar -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_home_page"/>
    <item
        android:id="@+id/nav_spaces"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_spaces_page"/>
    <item
        android:id="@+id/nac_id"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_id_page"/>
    <item
        android:id="@+id/nac_profile"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_profile_page"
        />
</menu>