<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_entry_"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_entry_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/login_entry_company_img_descript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@tools:sample/avatars[0]"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/login_entry_username_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/login_entry_username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/login_entry_logo"
        app:layout_constraintStart_toStartOf="@+id/login_entry_logo"
        app:layout_constraintTop_toBottomOf="@+id/login_entry_logo" />

    <EditText
        android:id="@+id/login_entry_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/login_entry_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_entry_username_input"
        app:layout_constraintStart_toStartOf="@+id/login_entry_username_input"
        app:layout_constraintTop_toBottomOf="@+id/login_entry_username_input" />

    <Button
        android:id="@+id/login_entry_forgot_credentials"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_entry_forgot_credentials_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_entry_login_button"
        app:layout_constraintStart_toStartOf="@+id/login_entry_login_button" />

    <Button
        android:id="@+id/login_entry_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_entry_logIn_button"
        app:layout_constraintEnd_toEndOf="@+id/login_entry_password_input"
        app:layout_constraintStart_toStartOf="@+id/login_entry_password_input"
        app:layout_constraintTop_toBottomOf="@+id/login_entry_signup_bttn" />

    <TextView
        android:id="@+id/login_entry_signup_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/login_entry_logIn_signup_button"
        android:textColor="#892FBA"
        app:layout_constraintEnd_toEndOf="@+id/login_entry_login_button"
        app:layout_constraintStart_toStartOf="@+id/login_entry_login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_entry_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>