<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Profile"
    android:background="@color/ligth_beige">

    <TextView
        android:id="@+id/profile_name_display"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_name_display"
        app:layout_constraintBottom_toTopOf="@+id/profile_email_display"
        app:layout_constraintEnd_toEndOf="@+id/profile_email_display"
        app:layout_constraintStart_toStartOf="@+id/profile_email_display" />

    <TextView
        android:id="@+id/profile_email_display"
        android:layout_width="167dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:text="@string/profile_email_display"
        app:layout_constraintBottom_toBottomOf="@+id/profile_avatar_display"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile_avatar_display"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@android:drawable/ic_dialog_info"
        android:contentDescription="@string/profile_avatar_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:srcCompat="@drawable/avatar_profile_picture" />

    <Button
        android:id="@+id/profile_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_accent"
        android:text="@string/profile_settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_calendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_calendar_title" />

    <TextView
        android:id="@+id/profile_calendar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calendar_title"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/profile_calendar"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_display" />

</androidx.constraintlayout.widget.ConstraintLayout>