<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/space_info_plan_1_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/space_info_plan_default_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/space_info_plan_1_decrip2"
        app:layout_constraintEnd_toEndOf="@+id/space_info_plan_1_decrip2"
        app:layout_constraintStart_toStartOf="@+id/space_info_plan_1_decrip2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/space_info_plan_1_renewal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_info_plan_default_renewal"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/space_info_plan_1_bttn2"
        app:layout_constraintEnd_toEndOf="@+id/space_info_plan_1_bttn2"
        app:layout_constraintStart_toStartOf="@+id/space_info_plan_1_bttn2" />

    <TextView
        android:id="@+id/space_info_plan_1_decrip2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/space_info_plan_default_decrip"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/space_info_plan_1_renewal2"
        app:layout_constraintEnd_toEndOf="@+id/space_info_plan_1_bttn2"
        app:layout_constraintStart_toStartOf="@+id/space_info_plan_1_bttn2" />

    <Button
        android:id="@+id/space_info_plan_1_bttn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue_accent"
        android:text="@string/space_info_plan_default_price"
        android:textColorHighlight="@color/blue_accent"
        android:textColorLink="@color/blue_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>