<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Change_Apperance">

    <TextView
        android:id="@+id/change_apperance_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/change_apperance_page_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_apperance_page_button_darkmode"
        android:layout_width="257dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_apperance_page_button_darkmode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_apperance_page_button_lightmode" />

    <Button
        android:id="@+id/change_apperance_page_button_lightmode"
        android:layout_width="257dp"
        android:layout_height="56dp"
        android:layout_marginTop="128dp"
        android:text="@string/change_apperance_page_button_lightmode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_apperance_page_title" />

</androidx.constraintlayout.widget.ConstraintLayout>