<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUp.Signup_User">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_usr_bdate"
        app:layout_constraintEnd_toStartOf="@+id/signup_usr_bdate"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_bdate"
        app:layout_constraintTop_toBottomOf="@+id/signup_usr_phone" />

    <EditText
        android:id="@+id/signup_usr_bdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/signup_usr_phone"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_phone"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_usr_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_usr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/signup_usr_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/signup_usr_name"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_name"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/signup_usr_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/signup_usr_email"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_email"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signup_usr_username"
        app:layout_constraintEnd_toStartOf="@+id/signup_usr_name"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_name"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_usr_email"
        app:layout_constraintEnd_toStartOf="@+id/signup_usr_email"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_email"
        app:layout_constraintTop_toBottomOf="@+id/signup_usr_name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_usr_phone"
        app:layout_constraintEnd_toStartOf="@+id/signup_usr_phone"
        app:layout_constraintStart_toStartOf="@+id/signup_usr_phone"
        app:layout_constraintTop_toBottomOf="@+id/signup_usr_email" />

    <Button
        android:id="@+id/signup_next_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signup_usr_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_usr_bdate" />
</androidx.constraintlayout.widget.ConstraintLayout>